--- a/cgm-portal/package.json
+++ b/cgm-portal/package.json
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.2.0",
+    "autoprefixer": "^10.4.24",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
+    "lucide-react": "^0.468.0",
+    "next": "15.1.0",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.0",
-    "lucide-react": "^0.468.0",
-    "@prisma/client": "^6.2.0"
+    "react-is": "^19.2.4",
+    "recharts": "^3.7.0",
+    "tailwindcss": "^3.4.19",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "prisma": "^6.2.0"
+    "prisma": "^6.2.0",
+    "typescript": "^5"
   }
 }
