--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "buildCommand": "cd cgm-portal && npm run build",
+    "buildCommand": "cd cgm-portal && npx prisma generate && npm run build",
     "installCommand": "cd cgm-portal && npm install",
     "outputDirectory": "cgm-portal/.next"
 }
