--- a/cgm-portal/package.json
+++ b/cgm-portal/package.json
@@ -15,8 +15,7 @@
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.468.0",
-    "next": "15.1.9",
-    "prisma": "^6.2.0",
+    "next": "^16.1.6",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -29,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "prisma": "^6.2.0",
     "typescript": "^5"
   }
 }
