--- a/cgm-mobile/package.json
+++ b/cgm-mobile/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.14.0",
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.13.0",
     "expo": "~54.0.33",
+    "expo-constants": "^18.0.13",
+    "expo-notifications": "^0.32.16",
     "expo-status-bar": "~3.0.9",
+    "lucide-react-native": "^0.575.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.23.0",
+    "react-native-svg": "^15.15.3"
   },
   "private": true
 }
